--- a/ecommerce/source/com/janilla/templates/ecommerce/call-to-action.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/call-to-action.html
@@ -8,5 +8,5 @@
 </article>
 
 <template id="link">
-  <a href="${uri}" class="button">${text}</a>
+  <a href="${uri}" class="button primary">${text}</a>
 </template>
