--- a/ecommerce/source/com/janilla/templates/ecommerce/card.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/card.html
@@ -3,7 +3,7 @@
     <img src="${meta.image.uri}" loading="lazy" />
     <div>
       <h3>${meta.title}</h3>
-      <p>${meta.description}</p>
+      <intl-format data-type="amount" data-value="${price}"></intl-format>
     </div>
   </a>
 </article>
