--- a/ecommerce/source/com/janilla/templates/ecommerce/login.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/login.html
@@ -19,8 +19,8 @@
         <a href="/recover-password">Click here to reset it</a>
       </p>
       <p>
-        <a href="/create-account">Create an account</a>
-        <button>Continue</button>
+        <a href="/create-account" class="button secondary">Create an account</a>
+        <button class="button primary">Continue</button>
       </p>
     </form>
   </article>
