--- a/ecommerce/source/com/janilla/templates/ecommerce/card.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/card.css
@@ -16,10 +16,15 @@ card-element {
   }
 
   div {
+    color: gray;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     padding: 1rem;
   }
 
-  p {
-    line-height: 1.5rem;
+  h3 {
+    color: inherit;
+    margin: 0;
   }
 }
