--- a/ecommerce/source/com/janilla/templates/ecommerce/checkout.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/checkout.html
@@ -6,9 +6,14 @@
     <article>
       <h2>Your Cart</h2>
       <ul>
-        <!--${cartItems}-->
+        <!--${items}-->
       </ul>
-      <p>Total: ${cartTotal}</p>
+      <dl>
+        <dt>Total:</dt>
+        <dd>
+          <intl-format data-type="amount" data-value="${total}"></intl-format>
+        </dd>
+      </dl>
     </article>
   </article>
 </main>
@@ -23,18 +28,39 @@
 
 <template id="guest">
   <p>
-    <a href="/login">Log in</a> or <a href="/create-account">create an account</a>
+    <a href="/login" class="button secondary">Log in</a>
+    or
+    <a href="/create-account">create an account</a>
   </p>
   <form>
     <p>Enter your email to checkout as a guest.</p>
     <label>
       Email Address
-      <input name="email" />
+      <input type="email" name="email" value="${value}" />
     </label>
-    <button>Continue as guest</button>
+    <button class="primary" disabled="${disabled}">Continue as guest</button>
   </form>
 </template>
 
 <template id="payment">
   <payment-element data-email="${email}" data-amount="${amount}"></payment-element>
 </template>
+
+<template id="item">
+  <li>
+    <div>
+      <a href="/products/${product.slug}">
+        <img src="${product.gallery[0].uri}" />
+      </a>
+    </div>
+    <div>
+      <p>${product.title}</p>
+      <p>${option}</p>
+      <p>x${quantity}</p>
+    </div>
+    <div>
+      <intl-format data-type="amount" data-value="${variant.price}"></intl-format>
+    </div>
+  </li>
+</template>
+
