--- a/ecommerce/source/com/janilla/templates/ecommerce/login.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/login.css
@@ -1,2 +1,12 @@
 login-element {
+  form {
+    p:last-child {
+      display: flex;
+      gap: 1rem;
+    }
+
+    button {
+      flex: 1;
+    }
+  }
 }
