--- a/ecommerce/source/com/janilla/templates/ecommerce/root.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/root.css
@@ -26,39 +26,75 @@ root-element {
     > header {
       align-items: center;
       border-bottom: 1px solid gray;
-      display: flex;
-      justify-content: space-between;
-      padding: 1rem;
+      padding: 1rem 2rem;
       position: relative;
       z-index: 20;
 
-      > button {
-        background: transparent;
-        border: 1px solid gray;
-        color: white;
-        padding: 0.5rem;
+      &,
+      > div {
+        display: flex;
       }
 
-      > dialog {
-        margin-left: 0;
+      > div {
+        flex: 1;
+
+        &:first-child {
+          > button {
+            background: transparent;
+            border: 1px solid gray;
+            border-radius: 0.25rem;
+            color: white;
+            padding: 0.5rem;
+          }
+
+          > dialog {
+            border-right: 1px solid darkgray;
+            margin-left: 0;
+
+            ul {
+              display: flex;
+              flex-direction: column;
+              gap: 1rem;
+            }
+          }
+        }
+
+        &:last-child {
+          justify-content: end;
+        }
       }
 
-      a {
+      > a {
         color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
         font-size: 0.875rem;
         font-weight: 500;
         line-height: 1.25rem;
-      }
 
-      img {
-        height: 34px;
-        object-fit: cover;
-        object-position: left;
-        width: 34px;
+        img {
+          height: 34px;
+          object-fit: cover;
+          object-position: left;
+          width: 34px;
+        }
       }
 
       lucide-icon {
         width: 1.25rem;
+      }
+    }
+
+    div:has(> [name="query"]) {
+      position: relative;
+
+      input {
+        width: 100%;
+      }
+
+      lucide-icon {
+        position: absolute;
+        right: .5rem;
+        top: 50%;
+        translate: 0 -50%;
       }
     }
 
@@ -70,7 +106,7 @@ root-element {
       line-height: 1.75;
 
       > * {
-        padding: 0 1rem;
+        padding: 0 2rem;
 
         @media (min-width: 1441px) {
           box-sizing: border-box;
@@ -89,7 +125,7 @@ root-element {
       border-top: 1px solid rgba(38, 38, 38, 0.8);
       /*margin-top: 2rem;*/
       margin-top: auto;
-      /*padding: 2rem 1rem 0;*/
+      padding: 2rem;
 
       > div,
       nav {
@@ -106,7 +142,10 @@ root-element {
       }
 
       img {
-        height: 34px;
+        height: 20px;
+        object-fit: cover;
+        object-position: left;
+        width: 20px;
       }
 
       nav {
@@ -143,7 +182,7 @@ root-element {
         background: transparent;
         border: none;
         font-size: 1rem;
-        padding-right: 1rem;
+        padding: 0.5rem 1rem 0.5rem 0;
       }
     }
   }
