--- a/ecommerce/source/com/janilla/templates/ecommerce/shop.css
+++ b/ecommerce/source/com/janilla/templates/ecommerce/shop.css
@@ -2,10 +2,14 @@ shop-element {
   margin-top: 2rem;
 
   main > article {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
     padding: 1rem;
+
+    &,
+    > div {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
 
     > div {
       @media (min-width: 1441px) {
@@ -16,15 +20,24 @@ shop-element {
     }
   }
 
-  h1 {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-    margin-bottom: 3rem;
+  ul {
+    display: flex;
+    gap: 1rem;
 
-    & + p {
-      color: light-dark(rgb(7, 5, 3), rgb(248, 250, 252));
-      font-weight: 600;
-      margin-bottom: 1rem;
+    a {
+      background: transparent;
+      border-radius: 0.25rem;
+      color: gray;
+      font-size: 0.875rem;
+      padding: 0.5rem;
+      text-decoration: none;
+      text-transform: uppercase;
+      white-space: nowrap;
+  
+      &.active {
+        background: darkgray;
+        color: white;
+      }
     }
   }
 }
