--- a/ecommerce/source/com/janilla/templates/ecommerce/checkout.html
+++ b/ecommerce/source/com/janilla/templates/ecommerce/checkout.html
@@ -50,7 +50,7 @@
   <li>
     <div>
       <a href="/products/${product.slug}">
-        <img src="${product.gallery[0].uri}" />
+        <img src="${product.gallery[0].uri}" loading="lazy" />
       </a>
     </div>
     <div>
