--- a/website/source/com/janilla/templates/website/base.css
+++ b/website/source/com/janilla/templates/website/base.css
@@ -62,6 +62,12 @@ h3 {
   color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
 }
 
+h1 {
+  font-size: 2.25rem;
+  font-weight: normal;
+  line-height: 1.1111111;
+}
+
 h2 {
   font-size: 1.5rem;
   font-weight: 700;
