--- a/blank/source/com/janilla/templates/blank/index.html
+++ b/blank/source/com/janilla/templates/blank/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Blank Template</title>
+    <title>${title}</title>
     <link href="/images/favicon.svg" rel="icon" />
-	<link href="${href}" rel="stylesheet" />
+	<link href="${stylesheetHref}" rel="stylesheet" />
     <script type="module" src="/script.js"></script>
   </head>
   <body>
