--- a/blank/source/com/janilla/templates/blank/page.html
+++ b/blank/source/com/janilla/templates/blank/page.html
@@ -1,4 +1,6 @@
+<img src="/images/janilla-logo-light.svg" loading="lazy" />
 <h1>Welcome to your new project.</h1>
 <p>
-  <a href="/admin">Visit the admin dashboard</a>
+  <a href="/admin" target="_blank">Go to admin panel</a>
+  <a href="#">Documentation</a>
 </p>
