--- a/website/source/com/janilla/templates/website/index.html
+++ b/website/source/com/janilla/templates/website/index.html
@@ -6,7 +6,7 @@
     <title>${title}</title>
     <!--${metaEntries}-->
     <link rel="icon" href="/images/favicon.svg" />
-    <link rel="stylesheet" href="${href}" />
+    <link rel="stylesheet" href="${stylesheetHref}" />
     <script type="module" src="/script.js"></script>
   </head>
   <body>
