--- a/website/source/com/janilla/templates/website/page.css
+++ b/website/source/com/janilla/templates/website/page.css
@@ -1,4 +1,13 @@
 page-element {
+
+  &[data-slug="home"] {
+    margin-top: 4rem;
+  }
+
+  p {
+    margin-top: 1.25rem;
+  }
+
   /*
   main {
     display: flex;
