--- a/blank/source/com/janilla/templates/blank/page.css
+++ b/blank/source/com/janilla/templates/blank/page.css
@@ -1,2 +1,78 @@
+html:has(page-element) {
+	background-color: rgb(0, 0, 0);
+
+	body {
+		color: rgb(255, 255, 255);
+		font-family: system-ui;
+		height: 100%;
+		margin: 0;
+	}
+
+	root-element {
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		height: 100vh;
+		justify-content: center;
+		margin: 0 auto;
+		max-width: 64rem;
+		padding: 1.5rem;
+	}
+}
+
 page-element {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+	img {
+		height: 4rem;
+		object-fit: cover;
+		object-position: left;
+		width: 4rem;
+	}
+	
+	h1 {
+		font-size: 2rem;
+		font-weight: 700;
+		line-height: 2rem;
+		margin: 1.5rem 0;
+		text-align: center;
+
+		@media (min-width: 64rem) {
+			font-size: 4rem;
+			line-height: 4.375rem;
+			margin: 2.5rem 0;
+		}
+	}
+	
+	p {
+		align-items: center;
+		display: flex;
+		gap: 0.75rem;
+		margin: 0;
+	}
+
+	a {
+		background-color: rgb(0, 0, 0);
+		border: 1px solid rgb(255, 255, 255);
+		border-radius: 0.25rem;
+		color: rgb(255, 255, 255);
+		font-size: 15px;
+		line-height: 1.5rem;
+		padding: 0.25rem 0.5rem;
+		text-decoration: none;
+
+		&:first-child {
+			background-color: rgb(255, 255, 255);
+			border: 1px solid rgb(0, 0, 0);
+			color: rgb(0, 0, 0);
+		}
+
+		@media (min-width: 64rem) {
+			font-size: 18px;
+			line-height: 2rem;
+		}
+	}
 }
