--- a/website/source/com/janilla/templates/website/base.css
+++ b/website/source/com/janilla/templates/website/base.css
@@ -66,6 +66,10 @@ h1 {
   font-size: 2.25rem;
   font-weight: normal;
   line-height: 1.1111111;
+
+  @media (min-width: 1441px) {
+    font-size: 3.5rem;
+  }
 }
 
 h2 {
