--- a/website/source/com/janilla/templates/website/root.css
+++ b/website/source/com/janilla/templates/website/root.css
@@ -14,7 +14,6 @@ root-element {
         margin-left: auto;
         margin-right: auto;
         max-width: 86rem;
-        padding: 2rem;
         width: 100%;
       }
 
@@ -27,9 +26,13 @@ root-element {
       align-items: center;
       display: flex;
       justify-content: space-between;
-      /*padding: 2rem 1rem;*/
+      padding: 2rem 1rem;
       position: relative;
       z-index: 20;
+
+      @media (min-width: 1441px) {
+        padding: 2rem;
+      }
 
       a {
         color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
@@ -78,14 +81,11 @@ root-element {
     > footer {
       background: light-dark(rgb(245, 245, 245), rgb(10, 10, 10));
       border-top: 1px solid rgba(38, 38, 38, 0.8);
-      /*margin-top: 2rem;*/
       margin-top: auto;
-      /*padding: 2rem 1rem 0;*/
 
       > div,
       nav {
         display: flex;
-        gap: 1rem;
 
         @media (max-width: 1440px) {
           flex-direction: column;
@@ -96,11 +96,22 @@ root-element {
         }
       }
 
+      > div {
+        padding: 2rem 1rem;
+        gap: 2rem;
+
+        @media (min-width: 1441px) {
+          padding: 2rem;
+        }
+      }
+
       img {
         height: 34px;
       }
 
       nav {
+        gap: 1rem;
+
         @media (min-width: 1441px) {
           order: 1;
         }
@@ -134,7 +145,11 @@ root-element {
         background: transparent;
         border: none;
         font-size: 1rem;
-        padding-right: 1rem;
+        padding: 0.5rem 1rem 0.5rem 0;
+
+        @media (min-width: 1441px) {
+          padding-right: 1.5rem;
+        }
       }
     }
   }
